# Text-Encoder

./: .gitignore  CLAUDE.md  QUICKSTART_ICONS.md  README.md  REFACTORING_SUMMARY.md  Text Encoder.spec  pyproject.toml  pytest_output.txt  requirements-ci.txt  requirements.txt  run_tests.py  test_integration.py  test_output.txt  test_system_tray.py
.github/workflows/: build.yml
.specify/memory/: constitution.md
docs/: SYSTEM_TRAY.md  SYSTEM_TRAY_IMPLEMENTATION.md  icon_implementation_summary.md  icons.md
scripts/: generate_icons.py  preview_icons.py  verify_icons.py
specs/001-text-utility-tool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-text-utility-tool/contracts/: hotkey_engine.md  registry.md  transformer_interface.md
src/: __init__.py  main.py  registry.py
src/hotkey/: __init__.py  global_hotkey.py
src/state/: __init__.py  manager.py
src/transformers/: __init__.py  ascii_encoding.py  base.py  special_formats.py
src/transformers/ciphers/: __init__.py
src/transformers/encoding/: __init__.py
src/transformers/hashing/: __init__.py
src/transformers/special/: __init__.py
src/transformers/text_processing/: __init__.py
src/ui/: __init__.py  content_area.py  main_window.py  sidebar.py  system_tray.py
src/utils/: __init__.py  transformation_worker.py
tests/: conftest.py
tests/unit/: test_registry.py
tests/unit/test_hotkey/: __init__.py  test_global_hotkey.py
tests/unit/test_transformers/: test_advanced_base_encoding.py  test_base.py  test_ciphers.py  test_hashing.py  test_special.py  (+2 more)
(+1 files in other folders)
